tests/negative_pomidory/empty_page_object_in_csv.pomidor
App Name:
Version:
Release date:

Sprint:

Feature:    Jira-1111
crazytomato -1
When I click on the #empty_page_obj I get tomato :)